[project]
name = "pmpts"
version = "0.1.0"
description = "Simple CLI to manage your prompt library"
readme = "README.md"
authors = [
    { name = "andrader", email = "38709237+andrader@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "rich",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

# entry points for command line interface
[project.scripts]
pmpts = "pmpts.cli:main_entry"
